--- a/Visual-Sort/app/src/main/res/drawable/cell_shape.xml
+++ b/Visual-Sort/app/src/main/res/drawable/cell_shape.xml
@@ -4,5 +4,5 @@
     android:shape= "rectangle" >
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimaryLight"/>
+        android:color="@color/secondaryBackgroundColor"/>
 </shape>
