Added string resources

--- a/Visual-Sort/app/src/main/res/layout/fragment_home.xml
+++ b/Visual-Sort/app/src/main/res/layout/fragment_home.xml
@@ -85,7 +85,7 @@
                     android:layout_marginBottom="10dp"
                     android:padding="8dp"
                     android:enabled="@{!homeViewModel.isBusy}"
-                    android:text="Visualize"
+                    android:text="@string/visualize_string"
                     android:textSize="17sp"
                     android:backgroundTint="@color/secondaryBackgroundColor"
                     app:strokeWidth="1dp"
@@ -99,7 +99,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:enabled="@{!homeViewModel.isBusy}"
-                    android:text="Shuffle values"
+                    android:text="@string/shuffle_values_string"
                     android:backgroundTint="@color/secondaryBackgroundColor"
                     app:strokeWidth="1dp"
                     app:cornerRadius="10dp"
@@ -139,7 +139,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:enabled="@{!homeViewModel.isBusy}"
-                    android:text="Change algorithm"
+                    android:text="@string/change_algorithm_string"
                     android:backgroundTint="@color/secondaryBackgroundColor"
                     app:strokeWidth="1dp"
                     app:cornerRadius="10dp"/>
