--- a/Visual-Sort/app/src/main/res/layout/fragment_home.xml
+++ b/Visual-Sort/app/src/main/res/layout/fragment_home.xml
@@ -55,7 +55,20 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:paddingHorizontal="5dp"
+                    android:layout_marginEnd="10dp"
                     android:src="@drawable/info"
+                    android:background="@drawable/feedback_button_selector"
+                    android:tint="@android:color/white"
+                    android:scaleType="fitCenter"
+                    tools:ignore="ContentDescription" />
+
+                <ImageButton
+                    android:id="@+id/compareButton"
+                    android:layout_width="35dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:paddingHorizontal="5dp"
+                    android:src="@drawable/scale"
                     android:background="@drawable/feedback_button_selector"
                     android:tint="@android:color/white"
                     android:scaleType="fitCenter"
