--- a/Visual-Sort/app/src/main/res/navigation/navigation_graph.xml
+++ b/Visual-Sort/app/src/main/res/navigation/navigation_graph.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph"
@@ -10,5 +9,18 @@
         android:id="@+id/homeFragment"
         android:name="ro.lincap.visualsort.presentation.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_comparisonFragment"
+            app:destination="@id/comparisonFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/comparisonFragment"
+        android:name="ro.lincap.visualsort.presentation.comparison.ComparisonFragment"
+        android:label="comparison_fragment"
+        tools:layout="@layout/comparison_fragment">
+        <action
+            android:id="@+id/action_comparisonFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
