Set up recycler view and adapter

--- a/Visual-Sort/app/src/main/res/layout/comparison_fragment.xml
+++ b/Visual-Sort/app/src/main/res/layout/comparison_fragment.xml
@@ -63,6 +63,11 @@
 
             </LinearLayout>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/algorithmsList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </ScrollView>
