--- a/Visual-Sort/app/src/main/res/layout/algorithm_card.xml
+++ b/Visual-Sort/app/src/main/res/layout/algorithm_card.xml
@@ -43,7 +43,8 @@
                 android:layout_height="wrap_content"
                 android:text="@{ExtensionsKt.toComplexityFormat(algorithm.complexityAverage)}"
                 android:textColor="@color/secondaryTextColor"
-                android:textSize="16sp"
+                android:textSize="14sp"
+                android:paddingVertical="2dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/card_algorithmName" />
 
